Address code review feedback - improve error handling and fix bugs
Co-authored-by: Glarc <27565067+Glarc@users.noreply.github.com>